# defichain-data-toolkit

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: daily_dfi_burn.ipynb  daily_dfi_burn_emission.ipynb  dfi_reserve_stakingPools.ipynb  dusd_buy_needed_peg.ipynb  usdToPeg_NI.ipynb
tests/: test_api_fetch_history.py
utils/: __init__.py  api_fetch_history.py  defichain.mplstyle
